Changes for 1.8.1

 - [DEV-447,DEV-448] added support of net.if.* under Windows (Sasha)
 - [ZBX-1582] fixed processing ssh.run[...] check to avoid the server crashing on libssh2 timeout (Dmitry)
 - [ZBX-1688] hosts, user doesn't have permission to, are shown gray in hostgroup configuration screen (Vedmak)
 - [ZBX-1608] fixed notifications after maintenance periods (Sasha)
 - [ZBX-1576] fixed evaluating aggregate items for large host groups (Sasha)
 - [ZBX-1822] changed in map, elements hosts now always show only count of problems (Aly)
 - [DEV-360] added support of calculated items (Sasha)
 - [ZBX-1821] fixed map problem if icon element is not selected (Aly)
 - [ZBX-1177] returned slide-level refresh rate (Aly)
 - [ZBX-1331] implemented auto adding selected group on host creation (Aly)
 - [ZBX-1427] fixed adding Actions through API (Aly)
 - [ZBX-1810] fixed adding user media through API (Aly)
 - [ZBX-1818] fixed API inner inconsistency in method naming (Aly)
 - [ZBX-1818] changed API version (Aly)
 - [ZBX-3] remove a comment saying syslog is used until it works from proxy config file as well (Richlv)
 - [ZBX-1801] fixed action disable link (Vedmak)
 - [ZBX-1763] added last week to SLA weekly graph (Aly)
 - [ZBX-1716] fixed server behaviour (not dying silently) when mysql database user, password or privileges change (Dmitry)
 - [ZBX-1800] updated Japanese translation; thanks to Kodai (Richlv)
 - [ZBX-1798] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-1783] fixed problem with fixed Y axis in graphs (Aly)
 - [ZBX-1654] fixed disabled trigger map icon (Aly)
 - [ZBX-1653] fixed link from maps to events (Aly)
 - [ZBX-1164] improved error messaging in regexp form (Aly)
 - [ZBX-1774] fixed error in slide screen in case if no screens defined (Aly)
 - [ZBX-1758] improved node filtering in sqls (Aly)
 - [ZBX-1776] fixed js error for ie6 in triggers status screen (Aly)
 - [ZBX-1752] fixed error showing maps when REGISTER_GLOBALS in PHP is on (Vedmak)