@@ -342,6 +342,14 @@ include_once('include/page_header.php');
 			// goButton name is necessary!!!
 			$goButton = new CButton('goButton', S_GO);
 			$goButton->setAttribute('id', 'goButton');
+
+			$jsLocale = array(
+				'S_CLOSE',
+				'S_NO_ELEMENTS_SELECTES'
+			);
+
+			zbx_addJSLocale($jsLocale);
+
 			zbx_add_post_js('chkbxRange.pageGoName = "screens";');
 //---------
 			$footer = get_table_header(array($goBox, $goButton));
@@ -418,6 +426,14 @@ include_once('include/page_header.php');
 // goButton name is necessary!!!
 			$goButton = new CButton('goButton',S_GO);
 			$goButton->setAttribute('id','goButton');
+
+            		$jsLocale = array(
+                            		'S_CLOSE',
+                            		'S_NO_ELEMENTS_SELECTES'
+        	        );
+
+            		zbx_addJSLocale($jsLocale);
+
 			zbx_add_post_js('chkbxRange.pageGoName = "shows";');
 
 			$table->setFooter(new CCol(array($goBox, $goButton)));
